# cuda-cource-2025

./: README.md
docs/: FOLDER_STRUCTURE.md  STUDENT_TEMPLATE.md  SUBMISSIONS.md
works/: README.md
works/RAMIISSA2/Lab 2/: ReadMe.md
works/RAMIISSA2/Lab 2/src/: matmul_tiled.cu
works/RAMIISSA2/Lab 4/: ReadMe.md
works/RAMIISSA2/Lab 4/src/: radix_sort.cu
works/av-sandzhieva/lab1/: Makefile  README.md
works/av-sandzhieva/lab1/src/: main.cu
works/av-sandzhieva/lab2/: Makefile  README.md
works/av-sandzhieva/lab2/include/: cpu_matrix_mult.h  gpu_matrix_mult.h  utils.h
works/av-sandzhieva/lab2/src/: cpu_matrix_mult.cpp  gpu_matrix_mult.cu  main.cu
works/av-sandzhieva/lab3/: Makefile  README.md
works/av-sandzhieva/lab3/images/: otpusk.pgm  otpusk4.pgm
works/av-sandzhieva/lab3/include/: io.h  sobel.h  utils.h
works/av-sandzhieva/lab3/src/: io.cu  main.cu  sobel.cu
works/av-sandzhieva/lab4/: README.md
works/av-sandzhieva/lab4/include/: gpu_radix_sort.h  utils.h
works/av-sandzhieva/lab4/src/: gpu_radix_sort.cu  main.cu
works/cherednikov-eo/lab_4/: README.md
works/cherednikov-eo/lab_4/include/: radix_sort.cuh
works/cherednikov-eo/lab_4/src/: main.cu  radix_sort.cu
works/gromov_na/lab5/: CMakeLists.txt  README.md  build.sh  run_inference.sh
works/gromov_na/lab5/scripts/: check.py  download.py  export_and_transfer_weights.py  export_model.py  int8_quantization.py  int8_quantization_mobilenet.py
works/gromov_na/lab5/src/: main.cpp  postprocess.cu  postprocess.h  structures.h
